# android-ncnn-yolo11

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pipikai/android_ncnn_yolo11/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolo11n.param  yolo11s.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/: yolo11.cpp  yolo11.h
app/src/main/java/com/pipikai/android_ncnn_yolo11/: MainActivity.kt  YoloNcnn.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pipikai/android_ncnn_yolo11/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
